--- a/index.html
+++ b/index.html
@@ -1,70 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/home.css" />
-    <title>Document</title>
-  </head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="./styles/reset.css" />
+        <link rel="stylesheet" href="./styles/style.css" />
+        <link rel="stylesheet" href="./styles/home.css" />
+        <title>Document</title>
+    </head>
 
-  <body>
-    <main>
-      <div class="left">
-        <div class="picker">
-          <label>
-            Head
-            <select id="head-dropdown">
-              <option value="bird-head">Bird</option>
-              <option value="duck-head">Duck</option>
-              <option value="dog-head">Dog</option>
-              <option value="horse">Horse</option>
-            </select>
-          </label>
-          <label>
-            Middle
-            <select id="middle-dropdown">
-              <option value="blue-pants">Blue</option>
-              <option value="dress-middle">Fancy</option>
-              <option value="pink-middle">Pink</option>
-              <option value="red-middle">Red</option>
-            </select>
-          </label>
-          <label>
-            Bottom
-            <select id="bottom-dropdown">
-              <option value="leg-pants">Single Leg</option>
-              <option value="white-pants">White Pants</option>
-              <option value="blue-pants">Blue Jeans</option>
-            </select>
-          </label>
-          <label>
-            Add a catch phrase
-            <input id="catchphrase-input" />
-            <button id="catchphrase-button">Add</button>
-          </label>
-        </div>
-        <div id="stats">
-          <p id="report-h"></p>
-          <p id="report-m"></p>
-          <p id="report-b"></p>
-          <div id="catchphrases"></div>
-        </div>
-      </div>
-      <div class="right">
-        <div class="character">
-          <div class="bg head" id="head"></div>
-          <div class="bg middle" id="middle"></div>
-          <div class="bg bottom" id="bottom"></div>
-        </div>
-      </div>
-    </main>
-    <script type="module" src="./app.js"></script>
-  </body>
+    <body>
+        <main>
+            <div class="left">
+                <div class="picker">
+                    <label>
+                        Head
+                        <select id="head-dropdown">
+                            <option value="bird-head">Bird</option>
+                            <option value="duck-head">Duck</option>
+                            <option value="dog-head">Dog</option>
+                            <option value="horse">Horse</option>
+                        </select>
+                    </label>
+                    <label>
+                        Middle
+                        <select id="middle-dropdown">
+                            <option value="blue-pants">Blue</option>
+                            <option value="dress-middle">Fancy</option>
+                            <option value="pink-middle">Pink</option>
+                            <option value="red-middle">Red</option>
+                        </select>
+                    </label>
+                    <label>
+                        Bottom
+                        <select id="bottom-dropdown">
+                            <option value="leg-pants">Single Leg</option>
+                            <option value="white-pants">White Pants</option>
+                            <option value="blue-pants">Blue Jeans</option>
+                        </select>
+                    </label>
+                    <label>
+                        Add a catch phrase
+                        <input id="catchphrase-input" />
+                        <button id="catchphrase-button">Add</button>
+                        <button id="catchphrase-reset-btn">Reset</button>
+                    </label>
+                </div>
+                <div id="stats">
+                    <p id="report-h"></p>
+                    <p id="report-m"></p>
+                    <p id="report-b"></p>
+                    <div id="catchphrases"></div>
+                </div>
+            </div>
+            <div class="right">
+                <div class="character">
+                    <div class="bg head" id="head"></div>
+                    <div class="bg middle" id="middle"></div>
+                    <div class="bg bottom" id="bottom"></div>
+                </div>
+            </div>
+        </main>
+        <script type="module" src="./app.js"></script>
+    </body>
 </html>
